fixing parallex issue on mobile device

--- a/components/sass/base/_global.scss
+++ b/components/sass/base/_global.scss
@@ -577,5 +577,9 @@ video::-webkit-media-controls {
 }
 
 
+.hidden{
+  display: none;
+}
+
 
 
